# gww-gis-tools

./: README.md  gww_gis_tools.code-workspace  pyproject.toml  requirements.txt
src/: direction_correction.ipynb  merge_usage.ipynb  tests.ipynb  trace_usage.ipynb  usage.ipynb
src/gww_gis_tools/: __init__.py
src/gww_gis_tools/merge_gis/: __init__.py  merge_sewer.py  sewer_helpers.py
src/gww_gis_tools/trace_gis/: __init__.py  trace_sewer.py
src/merge_gis/: merge_sewer.py
src/trace_gis/: trace_sewer.py
tests/: conftest.py  test_example_data.py  test_gww_gis_tools.py  test_merge_gis.py  test_trace_sewer_graph.py
tests/test_data/trace/: extract_data.py
tests/test_data/trace/local/: SETUP.md  extract_data.py  test_graph_file.json
tests/test_data/trace/simple/: test_data.json
