[tool.poetry]
name = "gww-gis-tools"
version = "0.2.0"
description = ""
authors = ["Timothy Holmes <tim.a.holmes@gmail.com>"]
packages = [
    {include = "gww_gis_tools", from = "src"}
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
pythonpath = "src"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.1"
gdal = {'optional' = true}
fiona = {'optional' = true}
geopandas = {'version' = '^2.2.1', 'optional' = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.extras]
geo = ["gdal", "fiona", "geopandas"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
