[project]
name = "gww-gis-tools"
authors = [
    {name = "Timothy Holmes", email = "tim.a.holmes@gmail.com"}
]
version = "0.2.0"
description = ""
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">= 3.9"
dependencies = [
    "pandas==2.2.1"
]

[project.optional-dependencies]
# geometry/GIS data tools
geo = [
    "gdal",
    "fiona",
    "geopandas",
    "shapely"
]

[project.urls]
repository = "https://github.com/timothy-holmes/gww_gis_tools.git"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
pythonpath = "src"
testpaths = "tests"